--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="es">
-<header>
+<head>
     <img src="assets/images/berserk.jpg" width="1000px" height="200px">
-</header>
+</head>
 <body style="background-color: 	#FFFFFF;">
     <h1 style="color: #FF0000;">ANDRÉS NORBERTO CÁCERES BECERRA </h1>
     <h2>Fecha de nacimiento: 14/04/2003</h2>
