--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    
+    <meta charset="UTF-8">
 </head>
 <body style="background-color: 	#FFFFFF;">
     <img src="assets/images/berserk.jpg" width="1000px" height="200px">
