--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="widht=device-widht, initial-scale=1.0">
 </head>
-<body style="background-color: 	#FFFFFF;">
+<body style="background-color: 	#F0F8FF;">
     <img src="assets/images/berserk.jpg" width="1000px" height="200px">
     <h1 style="color: #FF0000;">ANDRÉS NORBERTO CÁCERES BECERRA </h1>
     <h2>Fecha de nacimiento: 14/04/2003</h2>
@@ -26,7 +27,8 @@
         <li>Forrest Gump</li>
         <li>Sea of thieves</li>
     </ol>
-    <h3>Canción favorita: Make It Bun Dem - Skrillex</h3>
+    <h3>Canción favorita</h3>
+    <li>Make It Bun Dem - Skrillex</li>
     <audio controls src="assets/audio/Skrillex - Make It Bun Dem.mp3"></audio>
     <h3>Materias favoritas</h3>
     <table border="2">
